Bug 103032 - a11y: Crash on listbox dispose in toolbar dropdown
Summary: a11y: Crash on listbox dispose in toolbar dropdown
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All Linux (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-10-06 08:38 UTC by Maxim Monastirsky
Modified: 2016-10-13 16:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2016-10-06 08:38:11 UTC
Description:
With the gtk3 vclplug and Orca enabled, try to select something from the "Border Style" toolbar dropdown -> crash.

Problem introduced with:

commit 27328034f5e2644b4a0287532e762e87ea36c4a0
Date:   Thu Jul 21 11:55:13 2016 +0100

    gtk3-a11y: our eventbox is inside a grid now
    
    Change-Id: Icb49d6274b09fb426ab6c0f9f67b7c71c4ef9a31

Actual Results:  
 

Expected Results:
 


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:49.0) Gecko/20100101 Firefox/49.0
Comment 1 Xisco Faulí 2016-10-06 10:06:37 UTC
I can't reproduce it in

Version: 5.3.0.0.alpha0+
Build ID: ae3ec79354f7b4967e736c6a4cd7c08fc52e2b7d
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Could you please try with the latest daily build? http://dev-builds.libreoffice.org/daily/master/
Comment 2 Maxim Monastirsky 2016-10-06 13:13:19 UTC
I reproduce it with my own (dbgutil) build from today (commit ae137866167f65557c64ff19dd3bcf602a55207d), and also with:

Version: 5.3.0.0.alpha0+
Build ID: f933da55797566cf725e35ab0df17e91c7d5598f
CPU Threads: 4; OS Version: Linux 4.7; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-10-06_00:02:47
Locale: en-US (en_US.UTF-8); Calc: group

(so it's not gtk3 specific like I thought)
Comment 3 Maxim Monastirsky 2016-10-06 13:46:19 UTC
I bibisected for gtk2, and it crashes the whole 5.3 cycle. So regression only for gtk3.
Comment 4 Joel Madero 2016-10-08 04:55:56 UTC
Where's the bibisect?
Comment 5 Caolán McNamara 2016-10-11 07:57:42 UTC
FWIW, "gtk3-a11y: our eventbox is inside a grid now" is effectively "make a11y work under gtk3 again"
Comment 6 Commit Notification 2016-10-11 09:07:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6c220995aa2485a9c5d23f0ec952a64151ab25b6

Resolves: tdf#103032 a11y crash on listbox dispose in toolbar dropdown

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2016-10-11 09:14:02 UTC
That works to not crash anyway. Backport to 5-2 in gerrit now
Comment 8 Commit Notification 2016-10-13 16:16:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8d403f337dde983aeccc8d6066abfda6c12599ca&h=libreoffice-5-2

Resolves: tdf#103032 a11y crash on listbox dispose in toolbar dropdown

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.