Resolves: tdf#103032 a11y crash on listbox dispose in toolbar dropdown

Change-Id: I70bce310ba9b46efdbdfdec8d2c6689d0ba2e655